--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ footer{
     margin-top: 40px;
 }
 
-@media(max-width:600px){
+@media screen and (min-width:320px) and (max-width:640px){
     .menu{
         float: none;
     }
